# CollimationStudies

./: .gitignore  0.sh  C15.in  C25.in  CMakeLists.txt  README.geom  README.md  Src.in  batch.mac  batchGP2.mac  batchGP3.mac  batchGP5.mac  coll.in  init.mac  init_vis.mac  main.cc  source.in  vis.mac
GP2/: C15.in  C25.in  Src.in  source.in
GP3/: C15.in  C25.in  Src.in  source.in
GP5/: C15.in  C25.in  README
docs/: C15_GP2.dwg  C25_GP2.dwg  Source.dwg  SourceGP2.dwg  SourceGP3.dwg
include/: ActionInitialization.hh  CollActionInitialization.hh  CollEventAction.hh  CollPhysicsList.hh  CollPhysicsListMessenger.hh  CollRunAction.hh  CollimatorConstruction.hh  CollimatorMessenger.hh  EventAction.hh  Source.hh  SourceMessenger.hh  SteppingAction.hh  Tally.hh
src/: ActionInitialization.cc  CollActionInitialization.cc  CollPhysicsList.cc  CollPhysicsListMessenger.cc  CollimatorConstruction.cc  CollimatorMessenger.cc  EventAction.cc  Phantom.cc  Source.cc  SourceMessenger.cc  SteppingAction.cc  Tally.cc
